# knowledge_base

./: .env.example  main.py  pyproject.toml
config/: bailian_mcp_config.py  embedding_config.py  lm_config.py  milvus_config.py  mineru_config.py  minio_config.py  reranker_config.py
processor/import_processor/: base.py  config.py  exceptions.py  main_graph.py  state.py
processor/import_processor/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
processor/import_processor/prompt/: item_name_recognition.py
processor/query_processor/: base.py  main_graph.py  main_graphV2.py  state.py
processor/query_processor/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
processor/query_processor/prompt/: answer_prompt.py  item_name_confirm.py  search_embedding_hyde.py
test/: 01_env和系统环境变量的优先级.py  02_dataclass_field.py  03_测试异常处理.py  GPU验证.py  bge_m3测试向量获取.py  bge_m3测试向量转换.py  nodetest.py
test/fastapi/: backend_cors.py  bg_task.py  demo.py  demo02_pydantic.py  mount_static.py  upload.py  同步1.py  异步1.py
test/fastapi/sse/: sse1..py  sse2.py  sse3.py  sse4.py  sse5.py
test/fastapi/static/: frontend.html  sse1.html.html  sse2.html  sse3.html  sse4.html  (+1 more)
tool/: logger.py
utils/: embedding_utils.py  json_format_utils.py  llm_utils.py  milvus_utils.py  minio_utils.py  mongo_history_utils.py  reranker_http_utils.py  sse_utils.py  task_utils.py
