[project]
name = "knowledge-base"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.139.2",
    "grandalf>=0.8",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "minio>=7.2.20",
    "modelscope>=1.38.1",
    "numpy>=2.5.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
]
