[project]
name = "knowledge-base"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.139.2",
    "grandalf>=0.8",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "minio>=7.2.20",
    "modelscope>=1.38.1",
    "numpy>=2.5.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "torchaudio>=2.11.0",
    "flagembedding>=1.3.5",
    "transformers>=4.45.0,<5.0.0",
    "pymilvus[model]>=3.0.0",
    "openai-agents>=0.18.3",
]

[tool.uv.sources]
# 强制从 NVIDIA 源安装
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
